--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -17,11 +17,11 @@ scrape_configs:
 
     static_configs:
       - targets: ['localhost:9090']
-#  - job_name: dev-push-gateway
-#    metrics_path: /metrics
-#    scheme: http
-#    honor_labels: true
-#    static_configs:
-#      - targets: [ 'prom-pushgateway:9091' ]
-#        labels:
-#          service: 'prom-pushgateway'
+  - job_name: dev-push-gateway
+    metrics_path: /metrics
+    scheme: http
+    honor_labels: true
+    static_configs:
+      - targets: [ 'prom-pushgateway:9091' ]
+        labels:
+          service: 'prom-pushgateway'
