--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   prom-pushgateway:
-    image: prom/pushgateway
+    image: prom/pushgateway:v1.11.1
     ports:
       - 9091:9091
   prometheus:
@@ -14,7 +14,7 @@ services:
     ports:
       - 9090:9090
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:12.0.1
     depends_on:
       - prometheus
     ports:
