--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
       <scope>test</scope>
       <version>1.21.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.19.0</version>
+    </dependency>
   </dependencies>
 
   <build>
