--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.graalvm.polyglot/polyglot -->
     <dependency>
       <groupId>org.graalvm.polyglot</groupId>
       <artifactId>polyglot</artifactId>
@@ -32,7 +31,6 @@
       <version>${graaljs.version}</version>
       <type>pom</type>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -42,7 +40,6 @@
       <groupId>io.gatling.highcharts</groupId>
       <artifactId>gatling-charts-highcharts</artifactId>
       <version>${gatling.version}</version>
-      <!--<scope>gatlingReporter</scope>-->
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
@@ -55,7 +52,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.19.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+      <version>1.4.3</version>
+    </dependency>
     <dependency>
       <groupId>io.prometheus</groupId>
       <artifactId>client_java</artifactId>
